--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -1,17 +1,47 @@
+<% if alert %>
+  <p class="alert alert-danger"><%= alert %></p>
+<% end %>
+
+<%= form_tag(search_path, method: "get") do %>
+	<%= text_field_tag :q, params[:q] %>
+	<%= text_field_tag :language, params[:language] %>
+	<%= hidden_field_tag :page, 1 %>
+	<%= submit_tag("Search") %>
+<% end %>
+
+
 <h1>Results</h1>
 
-<div class="conatiner">
+<div class="container">
     <div class="col-md-12">
-        <% @repos[0..10].each do |repo| %>
-        <div class="col-md-4">
-            <p><%= repo["full_name"] %></p>
+        
+        <% if @page_number == nil %>
+            <% @page_number = 1 %>
+        <% else %>
+            <% @page_number = params[:page] %>
+        <% end %>
+        
+        <% unless @page_number == "1" %>
+            <%= link_to "Previous", search_path(:q => params[:q], :language => params[:language], :page => (@page_number.to_i - 1).to_s) %>
+        <% end %>
+        
+        <%= link_to "Next", search_path(:q => params[:q], :language => params[:language], :page => (@page_number.to_i + 1).to_s) %>
+        <p>Showing <%= (@page_number.to_i * 25 - 24) %>-<%= [(@page_number.to_i * 25), @repos["total_count"]].min %> of <%= @repos["total_count"] %> results</p>
+        <% @repos["items"].each do |repo| %>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-4">
+                    <%= link_to repo["full_name"], repo["html_url"] %>
+                </div>
+                <div class="col-md-4">
+                    <p><%= repo["language"] %></p>
+                </div>
+                <div class="col-md-4">
+                    <p><%= repo["stargazers_count"] %>★</p>
+                </div>
+            </div>
         </div>
-        <div class="col-md-4">
-            <p><%= repo["language"] %></p>
-        </div>
-        <div class="col-md-4">
-            
-        </div>
+                
         <% end %>
     </div>
 
