--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,15 @@
 </head>
 <body>
 
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand">Github Repo Search</a>
+      <%= render 'form' %>
+    </div>
+  </div>
+</nav>
+
 <div class="container">
   <%= yield %>
 </div>
