--- a/app/views/home/_form.html.erb
+++ b/app/views/home/_form.html.erb
@@ -1,10 +1,10 @@
-<form class="navbar-form navbar-left">
-  <%= form_tag(search_path, method: "get") do %>
-  	<%= text_field_tag :q, params[:q], class: "form-control" %>
-  	<%= text_field_tag :language, params[:language], class: "form-control" %>
-  	<%= check_box_tag :sort, "true", checked = (params[:sort] == "true" ? true : false), class: "checkbox" %>
+<%= form_tag(search_path, method: "get") do %>
+  <div class="navbar-form navbar-left">
+    <%= text_field_tag :q, params[:q], class: "form-control", placeholder: "Search repositories" %>
+    <%= text_field_tag :language, params[:language], class: "form-control", placeholder: "Language (optional)" %>
+    <%= check_box_tag :sort, "true", checked = (params[:sort] == "true" ? true : false), class: "checkbox" %>
     <%= label_tag :sort, "Sort by stars" %>
-  	<%= hidden_field_tag :page, 1 %>
-  	<%= submit_tag("Search", class: "btn btn-default") %>
-  <% end %>
-</form>
+    <%= hidden_field_tag :page, 1 %>
+    <%= submit_tag "Search", class: "btn btn-default" %>
+  </div>
+<% end %>
