Added top matches table

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,1 +1,4 @@
-<h1>Home#home</h1>
+<div class="jumbotron">
+  <h1>Search for Github repos here!</h1>
+  <p>You can also search for repos in a specific language, and sort by number of stars</p>
+</div>
