--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand">Github Repo Search</a>
+      <a class="navbar-brand"><i class="fa fa-github" aria-hidden="true"></i> Github Repo Search</a>
     </div>
     <%= render 'form' %>
   </div>
