--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -1,27 +1,19 @@
 <h1>Results</h1>
-
-
   <div class="col-md-12">
-      
     <% if @page_number == nil %>
       <% @page_number = 1 %>
     <% else %>
       <% @page_number = params[:page] %>
     <% end %>
-    
     <div class="btn-group">
       <% unless @page_number == "1" %>
         <%= link_to "Previous", search_path(:q => params[:q], :language => params[:language], :page => (@page_number.to_i - 1).to_s, :sort => params[:sort]), class:"btn btn-xs btn-primary" %>
       <% end %>
-      
       <% unless (@page_number.to_i * 25) > @repos["total_count"] %>
         <%= link_to "Next", search_path(:q => params[:q], :language => params[:language], :page => (@page_number.to_i + 1).to_s, :sort => params[:sort]), class:"btn btn-xs btn-primary" %>
       <% end %>
     </div>
-    
-    
     <p>Showing <%= (@page_number.to_i * 25 - 24) %>-<%= [(@page_number.to_i * 25), @repos["total_count"]].min %> of <%= @repos["total_count"] %> results</p>
-    
     <div class="col-md-9">
       <table class="table table-hover table-striped">
         <thead>
@@ -41,8 +33,7 @@
           <% end %>
         </tbody>
       </table>
-    </div>
-    
+    </div> <!-- col-md-9 -->
     <div class="col-md-3">
       <div class="panel panel-default">
         <div class="panel-heading">
@@ -65,14 +56,9 @@
             <p class="text-center">
               <%= repo["description"] %>
             </p>
-
           </div>
           <hr>
         <% end %>
       </div>
-    </div>
-      
-    
-
-
+    </div> <!-- col-md-3 -->
 </div>
