--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,4 +1,4 @@
 <div class="jumbotron">
-  <h1>Search for Github repos here!</h1>
+  <h1>Search for GitHub repos here!</h1>
   <p>You can also search for repos in a specific language, and sort by number of stars</p>
 </div>
