--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand"><i class="fa fa-github" aria-hidden="true"></i> Github Repo Search</a>
+          <%= link_to root_path, class:"navbar-brand" do %>
+          <i class="fa fa-github" aria-hidden="true"></i> GitHub Repo Search</a>
+          <% end %>
         </div>
         <%= render 'form' %>
       </div>
