--- a/app/views/home/_form.html.erb
+++ b/app/views/home/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_tag(search_path, method: "get") do %>
   <div class="navbar-form navbar-left">
-    <%= text_field_tag :q, params[:q], class: "form-control", placeholder: "Search repositories" %>
+    <%= text_field_tag :q, params[:q], class: "form-control", placeholder: "Search repositories", required: true %>
     <%= text_field_tag :language, params[:language], class: "form-control", placeholder: "Language (optional)" %>
     <%= check_box_tag :sort, "true", checked = (params[:sort] == "true" ? true : false), class: "checkbox" %>
     <%= label_tag :sort, "Sort by stars" %>
